--- a/Atlas.Application/Atlas.Application.csproj
+++ b/Atlas.Application/Atlas.Application.csproj
@@ -137,6 +137,7 @@
     <Folder Include="CQRS\Orders\Queries\FindOrderPagedList\" />
     <Folder Include="CQRS\Users\Queries\FindUserPagedList\" />
     <Folder Include="CQRS\Clients\Queries\FindClientPagedList\" />
+    <Folder Include="CQRS\Couriers\Queries\FindCourierPagedList\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
@@ -281,5 +282,6 @@
     <None Remove="CQRS\Orders\Queries\FindOrderPagedList\" />
     <None Remove="CQRS\Users\Queries\FindUserPagedList\" />
     <None Remove="CQRS\Clients\Queries\FindClientPagedList\" />
+    <None Remove="CQRS\Couriers\Queries\FindCourierPagedList\" />
   </ItemGroup>
 </Project>
