--- a/Atlas.Application/Atlas.Application.csproj
+++ b/Atlas.Application/Atlas.Application.csproj
@@ -138,6 +138,7 @@
     <Folder Include="CQRS\Users\Queries\FindUserPagedList\" />
     <Folder Include="CQRS\Clients\Queries\FindClientPagedList\" />
     <Folder Include="CQRS\Couriers\Queries\FindCourierPagedList\" />
+    <Folder Include="CQRS\Admins\Queries\FindAdminPagedList\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
@@ -283,5 +284,6 @@
     <None Remove="CQRS\Users\Queries\FindUserPagedList\" />
     <None Remove="CQRS\Clients\Queries\FindClientPagedList\" />
     <None Remove="CQRS\Couriers\Queries\FindCourierPagedList\" />
+    <None Remove="CQRS\Admins\Queries\FindAdminPagedList\" />
   </ItemGroup>
 </Project>
