--- a/Atlas.Presentation/Atlas.Payme.MerchantApi/appsettings.json
+++ b/Atlas.Presentation/Atlas.Payme.MerchantApi/appsettings.json
@@ -6,6 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuthSettings": {
+    "Login": "test",
+    "Password": "UXTVWZe4Q@XevDbhRjj&M%zq1KCKPZoKN?OK"
+  }
 }
 
