Payme merchant api settings added

--- a/Atlas.Presentation/Atlas.Identity/appsettings.json
+++ b/Atlas.Presentation/Atlas.Identity/appsettings.json
@@ -28,5 +28,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AuthSettings": {
+    "Login": "test",
+    "Password": "UXTVWZe4Q@XevDbhRjj&M%zq1KCKPZoKN?OK"
+  },
   "AllowedHosts": "*"
 }
