--- a/Atlas.Presentation/Atlas.Payme.MerchantApi/appsettings.json
+++ b/Atlas.Presentation/Atlas.Payme.MerchantApi/appsettings.json
@@ -10,6 +10,7 @@
   "AuthSettings": {
     "Login": "test",
     "Password": "UXTVWZe4Q@XevDbhRjj&M%zq1KCKPZoKN?OK"
-  }
+  },
+  "DbConnection": "User ID=dominikgaliev;Password=123;Host=localhost;Port=5432;Database=Atlas;SearchPath=public"
 }
 
