Payme merchant api refactored

--- a/Atlas.Presentation/Atlas.Identity/appsettings.json
+++ b/Atlas.Presentation/Atlas.Identity/appsettings.json
@@ -28,7 +28,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AuthSettings": {
+  "Auth": {
     "Login": "test",
     "Password": "UXTVWZe4Q@XevDbhRjj&M%zq1KCKPZoKN?OK"
   },
