--- a/Atlas.Presentation/Atlas.Payme.MerchantApi/appsettings.json
+++ b/Atlas.Presentation/Atlas.Payme.MerchantApi/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AuthSettings": {
+  "Auth": {
     "Login": "test",
     "Password": "UXTVWZe4Q@XevDbhRjj&M%zq1KCKPZoKN?OK"
   },
