--- a/Atlas.Presentation/Atlas.Payme.MerchantApi/Atlas.Payme.MerchantApi.csproj
+++ b/Atlas.Presentation/Atlas.Payme.MerchantApi/Atlas.Payme.MerchantApi.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.16.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="EdjCase.JsonRpc.Router" Version="5.1.3" />
   </ItemGroup>
