--- a/Atlas.Presentation/Atlas.WebApi/appsettings.json
+++ b/Atlas.Presentation/Atlas.WebApi/appsettings.json
@@ -22,7 +22,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AuthSettings": {
+  "Auth": {
     "Login": "test",
     "Password": "UXTVWZe4Q@XevDbhRjj&M%zq1KCKPZoKN?OK"
   },
