Payme merchant api refactored v2

--- a/Atlas.Presentation/Atlas.Payme.MerchantApi/appsettings.json
+++ b/Atlas.Presentation/Atlas.Payme.MerchantApi/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "Auth": {
-    "Login": "test",
+    "Login": "Paycom",
     "Password": "UXTVWZe4Q@XevDbhRjj&M%zq1KCKPZoKN?OK"
   },
   "DbConnection": "User ID=dominikgaliev;Password=123;Host=localhost;Port=5432;Database=Atlas;SearchPath=public"
