--- a/Atlas.Presentation/Atlas.WebApi/appsettings.json
+++ b/Atlas.Presentation/Atlas.WebApi/appsettings.json
@@ -23,7 +23,7 @@
     }
   },
   "Auth": {
-    "Login": "test",
+    "Login": "Paycom",
     "Password": "UXTVWZe4Q@XevDbhRjj&M%zq1KCKPZoKN?OK"
   },
   "AllowedHosts": "*"
