--- a/Atlas.Presentation/Atlas.Identity/appsettings.json
+++ b/Atlas.Presentation/Atlas.Identity/appsettings.json
@@ -29,7 +29,7 @@
     }
   },
   "Auth": {
-    "Login": "test",
+    "Login": "Paycom",
     "Password": "UXTVWZe4Q@XevDbhRjj&M%zq1KCKPZoKN?OK"
   },
   "AllowedHosts": "*"
