--- a/Atlas.Presentation/Atlas.Payme.MerchantApi/Atlas.Payme.MerchantApi.csproj
+++ b/Atlas.Presentation/Atlas.Payme.MerchantApi/Atlas.Payme.MerchantApi.csproj
@@ -22,6 +22,7 @@
     <None Remove="Helpers\Policies\" />
     <None Remove="Middlewares\" />
     <None Remove="Settings\" />
+    <None Remove="Enums\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
@@ -34,6 +35,7 @@
     <Folder Include="Helpers\Policies\" />
     <Folder Include="Middlewares\" />
     <Folder Include="Settings\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Atlas.Application\Atlas.Application.csproj">
