--- a/Atlas.Application/Atlas.Application.csproj
+++ b/Atlas.Application/Atlas.Application.csproj
@@ -191,6 +191,10 @@
     <Folder Include="CQRS\Goods\Queries\GetGoodsForPromoCategories\" />
     <Folder Include="CQRS\Orders\Commands\ChangeOrderRefundStatus\" />
     <Folder Include="CQRS\Categories\Queries\SearchCategoriesByGoodName\" />
+    <Folder Include="CQRS\PromoUsages\" />
+    <Folder Include="CQRS\PromoUsages\Queries\" />
+    <Folder Include="CQRS\PromoUsages\Queries\GetByClientId\" />
+    <Folder Include="CQRS\PromoUsages\Queries\GetLastUsagesPaged\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
@@ -391,5 +395,9 @@
     <None Remove="CQRS\Goods\Queries\GetGoodsForPromoCategories\" />
     <None Remove="CQRS\Orders\Commands\ChangeOrderRefundStatus\" />
     <None Remove="CQRS\Categories\Queries\SearchCategoriesByGoodName\" />
+    <None Remove="CQRS\PromoUsages\" />
+    <None Remove="CQRS\PromoUsages\Queries\" />
+    <None Remove="CQRS\PromoUsages\Queries\GetByClientId\" />
+    <None Remove="CQRS\PromoUsages\Queries\GetLastUsagesPaged\" />
   </ItemGroup>
 </Project>
