--- a/Atlas.Application/Atlas.Application.csproj
+++ b/Atlas.Application/Atlas.Application.csproj
@@ -193,6 +193,7 @@
     <Folder Include="CQRS\Categories\Queries\SearchCategoriesByGoodName\" />
     <Folder Include="CQRS\PromoUsages\" />
     <Folder Include="CQRS\PromoUsages\Queries\" />
+    <Folder Include="CQRS\GoodToCarts\Commands\UpdateManyGoodsInCart\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
@@ -395,5 +396,6 @@
     <None Remove="CQRS\Categories\Queries\SearchCategoriesByGoodName\" />
     <None Remove="CQRS\PromoUsages\" />
     <None Remove="CQRS\PromoUsages\Queries\" />
+    <None Remove="CQRS\GoodToCarts\Commands\UpdateManyGoodsInCart\" />
   </ItemGroup>
 </Project>
