--- a/Atlas.Eskiz/Atlas.Eskiz.csproj
+++ b/Atlas.Eskiz/Atlas.Eskiz.csproj
@@ -26,4 +26,7 @@
     <Folder Include="Abstractions\" />
     <Folder Include="Settings\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Atlas.Domain\Atlas.Domain.csproj" />
+  </ItemGroup>
 </Project>
