--- a/Atlas.Presentation/Atlas.Identity/Atlas.Identity.csproj
+++ b/Atlas.Presentation/Atlas.Identity/Atlas.Identity.csproj
@@ -8,6 +8,13 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Debug\net5.0\Atlas.Identity.xml</DocumentationFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Helpers\**" />
+    <Content Remove="Helpers\**" />
+    <EmbeddedResource Remove="Helpers\**" />
+    <None Remove="Helpers\**" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Atlas.Application\Atlas.Application.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
@@ -25,7 +32,6 @@
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Middlewares\" />
-    <Folder Include="Helpers\" />
     <Folder Include="Models\" />
     <Folder Include="Constants\" />
     <Folder Include="Settings\" />
