--- a/Atlas.Application/Atlas.Application.csproj
+++ b/Atlas.Application/Atlas.Application.csproj
@@ -213,6 +213,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Atlas.Domain\Atlas.Domain.csproj" />
+    <ProjectReference Include="..\Atlas.SubscribeApi\Atlas.SubscribeApi.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Serilog" />
