Payment end-point added

--- a/Atlas.Presentation/Atlas.Identity/appsettings.json
+++ b/Atlas.Presentation/Atlas.Identity/appsettings.json
@@ -32,5 +32,9 @@
     "Login": "Paycom",
     "Password": "UXTVWZe4Q@XevDbhRjj&M%zq1KCKPZoKN?OK"
   },
+  "Subscribe": {
+    "Url": "https://checkout.test.paycom.uz/api",
+    "AuthToken": "63eb50ca32a352d85bada8d0:FQP394DJ4fqHQnp6Wnntmu8dw5w7o2B3pcLB"
+  },
   "AllowedHosts": "*"
 }
